prueba de work worker

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <br><br>
     <h1>Temperature Converter</h1>
+    <button onclick="startWorker()">Start Worker</button>
     <br><br>
     <table>
       <tr>
@@ -22,6 +23,29 @@
         <td><span class="output" id="converted"></span></td>
       </tr>
     </table>
+    
+     
+    <script>
+      var w;
+
+        function startWorker() {
+            if(typeof(Worker) !== "undefined") {
+                if(typeof(w) == "undefined") {
+                    w = new Worker("temperatura.js");
+                }
+                w.onmessage = function(event) {
+                    document.getElementById("result").innerHTML = event.data;
+                };
+            } else {
+                document.getElementById("result").innerHTML = "Sorry! No Web Worker support.";
+            }
+        }
+
+        function stopWorker() { 
+            w.terminate();
+            w = undefined;
+        }
+</script>
   </body>
 </html>
 
